# RouterEval

./: README.md  Untitled.ipynb  generate_similarity_evals.py  generate_similarity_evals_fixed.py  main.py  prepare_gsm8k_dataset.py  pyproject.toml  test_new_data.py
LLMRouter/datasets/: __init__.py
LLMRouter/datasets/responses/gsm8k/: llama%2Fllama-3.3-8b.jsonl
RouterEval/: __init__.py  convert_data.py
data/router_dataset/: router_extended_data.pkl  router_extended_meta.json
data_process/: __init__.py
router/C-RoBERTa-cluster/: cluster.py
router/PRKnn-knn/: knn.py
router/R_o/: r_o_router.py
router/RoBERTa-MLC/: roberta_MLC.py
