[project]
name = "routereval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
